@@ -55,35 +55,36 @@ if (adjustTimeStep)
             )
         );
 
-    scalar timeOfNextEvent = GREAT;
+    //-Adjust time step to explicitly compute infiltration event time
     if (eventTimeTracking)
     {
+        scalar timeOfNextEvent = GREAT;
         if (infiltrationEventIsPresent) timeOfNextEvent = min(timeOfNextEvent,infiltrationEvent.currentEventEndTime());
-    }
 
-    scalar timeToNextEvent = timeOfNextEvent-runTime.timeOutputValue();
-    scalar nSteps =  timeToNextEvent/runTime.deltaTValue();
-    if ((nSteps < labelMax) && (nSteps != 0))
-    {
-        const label nStepsToNextEvent = label(max(nSteps, 1) + 0.99);
-        runTime.setDeltaTNoAdjust(timeToNextEvent/nStepsToNextEvent);
-    }
-
-    //- To handle close event times (inferior to current timestep)
-    if (nSteps == 0)
-    {
-        scalar timeToCloseEvent = GREAT;
-        if (eventTimeTracking)
+        scalar timeToNextEvent = timeOfNextEvent-runTime.timeOutputValue();
+        scalar nSteps =  timeToNextEvent/runTime.deltaTValue();
+        if ((nSteps < labelMax) && (nSteps != 0))
         {
-            if (infiltrationEventIsPresent)
+            const label nStepsToNextEvent = label(max(nSteps, 1) + 0.99);
+            runTime.setDeltaTNoAdjust(timeToNextEvent/nStepsToNextEvent);
+        }
+
+        //- To handle close event times (inferior to current timestep)
+        if (nSteps == 0)
+        {
+            scalar timeToCloseEvent = GREAT;
+            if (eventTimeTracking)
             {
-                if (infiltrationEvent.currentEventEndTime() != runTime.timeOutputValue())
+                if (infiltrationEventIsPresent)
                 {
-                    timeToCloseEvent = min(timeToCloseEvent,infiltrationEvent.currentEventEndTime()-runTime.timeOutputValue());
+                    if (infiltrationEvent.currentEventEndTime() != runTime.timeOutputValue())
+                    {
+                        timeToCloseEvent = min(timeToCloseEvent,infiltrationEvent.currentEventEndTime()-runTime.timeOutputValue());
+                    }
                 }
             }
+            runTime.setDeltaTNoAdjust(min(runTime.deltaTValue(),timeToCloseEvent));
         }
-        runTime.setDeltaTNoAdjust(min(runTime.deltaTValue(),timeToCloseEvent));
     }
 
     Info<< "deltaT = " <<  runTime.deltaTValue() << endl;
